Updated portfolio style to remove mobile images on mobile displays. Also fixed padding on menu button and changed the hero text

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ a {
 	font-size: 1.2rem;
 	border-radius: 50%;
 	border: none;
-	padding: 0.6rem;
+	padding: 0.7rem 0.5rem 0.5rem;
 	background: linear-gradient(#7ddca8, #048b7e);
 	color: #fff;
 }
@@ -176,6 +176,8 @@ a {
 	flex-direction: column;
 	justify-content: space-between;
 	height: 100%;
+	width: 75%;
+	margin: auto;
 	box-sizing: border-box;
 }
 
@@ -214,6 +216,7 @@ a {
 .scroll__icon {
 	text-align: center;
 	z-index: 1;
+	margin-bottom: 2rem;
 }
 
 .scroll__icon img {
@@ -438,7 +441,7 @@ ul {
 .desktop__img {
 	width: 45%;
 	margin: 1rem;
-	box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
 }
 
 .mobile {
@@ -599,18 +602,18 @@ ul {
 	}
 
 	.desktop__img {
-		width: 100%;
-		margin: 0 0 2rem 0;
+		width: 90%;
+		margin: 0 auto 2rem;
 	}
 
 	.mobile {
-		flex-direction: column;
+		display: none;
 	}
-
+	/* 
 	.mobile__img {
 		width: 90%;
 		margin: 1.5rem auto;
-	}
+	} */
 
 	.medium__text {
 		width: 90%;
@@ -651,13 +654,17 @@ ul {
 		align-self: flex-end;
 	}
 
+	.hero {
+		width: 95%;
+	}
+
 	.menu {
 		top: 1.3rem;
 		right: 1.3rem;
 		font-size: 1.2rem;
 		border-radius: 50%;
 		border: none;
-		padding: 0.7rem;
+		padding: 0.7rem 0.5rem 0.5rem;
 		background: linear-gradient(#7ddca8, #048b7e);
 		color: #fff;
 	}
